@@ -978,6 +978,7 @@
 	    <hackergotchi>http://gnome.org/~danilo/mali-cupavi.png</hackergotchi>
 	    <bugzilla-account>danilo@gnome.org</bugzilla-account><!-- default to email -->
 	    <cvs-account>danilo</cvs-account>
+	    <since>April 2003</since>
         </coordinator>
 
         <webpage>http://prevod.org/</webpage>
